yeah basically uhh did cool stuff uhh yeah so basically

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   </p>
   <br />
   <div>
-          <img class="photo" src="Image1.jpg"> </img>
+          <img class="photo" src="capture.jpg"> </img>
     <h1 class="headertext">about</h1>
     <p class="text">
-      hello yes I'm am coder do code what for fun and enjoyament. not career
+      I'm am coder what learns to code what for fun and enjoyament. not career
       potential path for me at moment but i consider all opurtunities as a good
       capitalistic fellow
     </p>
   </div>
   <div class="box">
-    <a class="textinbox" href="AlbumCoverProject.html">album cover project</a>
+    <a class="textinbox" href="AlbumCoverProject.html">portfolio</a>
   </div>
 </html>
