added sketches and some new classes and IDs to make them work

--- a/AlbumCoverProject.html
+++ b/AlbumCoverProject.html
@@ -12,4 +12,20 @@
   <a class="textinbox" href="index.html">Home</a>
 </div>
 <br />
+<hr />
+<br />
+<div class="sketchbox">
+  <iframe
+    class="sketch"
+    src="https://editor.p5js.org/nletscher23/embed/2Udck9yYH"
+  ></iframe>
+</div>
+<br />
+<div class="sketchbox">
+  <iframe
+    id="AlbumCover"
+    src="https://editor.p5js.org/nletscher23/embed/3HupSa9vT"
+  ></iframe>
+</div>
+<br />
 <br />
